// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServerErrors component tests snapshot testing  1`] = `
<div>
  <section
    class="pf-c-page__main-section pf-m-light"
  >
    <div
      class="pf-l-bullseye"
      data-ouia-component-type="server-errors"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-empty-state"
      >
        <div
          class="pf-c-empty-state__content"
        >
          <svg
            aria-hidden="true"
            class="pf-c-empty-state__icon"
            fill="var(--pf-global--danger-color--100)"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
          <h1
            class="pf-c-title pf-m-4xl"
            data-ouia-component-id="OUIA-Generated-Title-1"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Error fetching data
          </h1>
          <div
            class="pf-c-empty-state__body"
            data-testid="empty-state-body"
          >
            An error occurred while accessing data. It is possible the data index is still being loaded, please try again in a few moments.
             
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link pf-m-inline"
              data-ouia-component-id="OUIA-Generated-Button-link-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              data-testid="display-error"
              id="display-error"
              type="button"
            >
              See more details
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`ServerErrors component tests snapshot testing with small variant  1`] = `
<div>
  <div
    class="pf-l-bullseye"
    data-ouia-component-type="server-errors"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-empty-state"
    >
      <div
        class="pf-c-empty-state__content"
      >
        <svg
          aria-hidden="true"
          class="pf-c-empty-state__icon"
          fill="var(--pf-global--danger-color--100)"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
        <h1
          class="pf-c-title pf-m-4xl"
          data-ouia-component-id="OUIA-Generated-Title-4"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          Error fetching data
        </h1>
        <div
          class="pf-c-empty-state__body"
          data-testid="empty-state-body"
        >
          An error occurred while accessing data. It is possible the data index is still being loaded, please try again in a few moments.
           
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-4"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            data-testid="display-error"
            id="display-error"
            type="button"
          >
            See more details
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ServerErrors component tests snapshot with children  1`] = `
<div>
  <section
    class="pf-c-page__main-section pf-m-light"
  >
    <div
      class="pf-l-bullseye"
      data-ouia-component-type="server-errors"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-empty-state"
      >
        <div
          class="pf-c-empty-state__content"
        >
          <svg
            aria-hidden="true"
            class="pf-c-empty-state__icon"
            fill="var(--pf-global--danger-color--100)"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
          <h1
            class="pf-c-title pf-m-4xl"
            data-ouia-component-id="OUIA-Generated-Title-2"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Error fetching data
          </h1>
          <div
            class="pf-c-empty-state__body"
            data-testid="empty-state-body"
          >
            An error occurred while accessing data. It is possible the data index is still being loaded, please try again in a few moments.
             
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link pf-m-inline"
              data-ouia-component-id="OUIA-Generated-Button-link-2"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              data-testid="display-error"
              id="display-error"
              type="button"
            >
              See more details
            </button>
          </div>
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-primary"
            data-ouia-component-id="OUIA-Generated-Button-primary-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Go back
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;
